<resources>
    <string name="app_name">MovieTvCat</string>
    <string name="judul_movie">title movie</string>
    <string name="thn_rilis">2018</string>
    <string name="durasi_movie">2h 22m</string>
    <string name="genre_movie">Fantasy</string>
    <string name="movies">Movies</string>
    <string name="tvshow">Tv Shows</string>
    <string-array name="judul_data">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avenger - Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Spiderman: Into The Spider-verse</item>
        <item>Venom</item>
    </string-array>
    <string-array name="thn_rilis_data">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="tanggal_rilis_data">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>December 6, 2018</item>
        <item>September 28, 2018</item>
    </string-array>
    <string-array name="durasi_data">
        <item>2h 14m</item>
        <item>2h 22m</item>
        <item>2h 40m</item>
        <item>2h 13m</item>
        <item>1h 54m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>1h 56m</item>
        <item>2h 20m</item>
    </string-array>
    <string-array name="genre_data">
        <item>Drama/Romance</item>
        <item>Fantasy/Sci-fi</item>
        <item>Fantasy/Sci-fi</item>
        <item>Drama/Biography</item>
        <item>Sci-fi/Action</item>
        <item>Science fantasy/Action</item>
        <item>Drama/Mystery</item>
        <item>Fantasy/Sci-fi</item>
        <item>Action/Thriller</item>
    </string-array>
    <string-array name="director_data">
        <item>Bradley Cooper</item>
        <item>James Wan</item>
        <item>Joe Russo</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Bob Persichetti</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string-array name="actors_data">
        <item>Lady Gaga, Bradley Cooper, Sam Elliott, Andrew Dice Clay, Rafi Gavron</item>
        <item>Jason Momoa, Amber Heard, Willem Dafoe, Patrick Wilson, Nicole Kidman</item>
        <item>Robert Downey Jr., Chris Hemsworth, Chris Evans, Mark Ruffalo, Scarlett Johansson</item>
        <item>Rami Malek, Gwilym Lee, Ben Hardy, Joseph Mazzello, Lucy Boynton</item>
        <item>Hailee Steinfeld, Jorge Lendeborg Jr., John Cena, Jason Ian Drucker, Pamela Adlon</item>
        <item>Masako Nozawa, Ryou Horikawa, Bin Shimada, Ryusei Nakao, Banjou Ginga</item>
        <item>James McAvoy, Bruce Willis, Samuel L. Jackson, Anya Taylor-Joy, Sarah Paulson</item>
        <item>Shameik Moore, Jake Johnson, Hailee Steinfeld, Mahershala Ali, Brian Tyree Henry</item>
        <item>Tom Hardy, Michelle Williams, Riz Ahmed, Scott Haze, Reid Scott</item>
    </string-array>
    <string-array name="poster_data">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </string-array>
    <string-array name="sinopsis_data">
        <item>"Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally's career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons."</item>
        <item>"Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm's half-human, half-Atlantean brother and true heir to the throne."</item>
        <item>"As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain."</item>
        <item>"Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock 'n' roll band Queen in 1970. Hit songs become instant classics. When Mercury's increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess."</item>
        <item>"On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug."</item>
        <item>"Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called 'Broly' who they've never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so what's this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix."</item>
        <item>"In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men."</item>
        <item>"Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension."</item>
        <item>"Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own."</item>
    </string-array>
    <string-array name="screen_1_data">
        <item>@drawable/ss1_a_star</item>
        <item>@drawable/ss1_aquaman</item>
        <item>@drawable/ss1_avengerinfinity</item>
        <item>@drawable/ss1_bohemian</item>
        <item>@drawable/ss1_bumblebee</item>
        <item>@drawable/ss1_dragonball</item>
        <item>@drawable/ss1_glass</item>
        <item>@drawable/ss1_spiderman</item>
        <item>@drawable/ss1_venom</item>
    </string-array>
    <string-array name="screen_2_data">
        <item>@drawable/ss2_a_star</item>
        <item>@drawable/ss2_aquaman</item>
        <item>@drawable/ss2_avengerinfinity</item>
        <item>@drawable/ss2_bohemian</item>
        <item>@drawable/ss2_bumblebee</item>
        <item>@drawable/ss2_dragonball</item>
        <item>@drawable/ss2_glass</item>
        <item>@drawable/ss2_spiderman</item>
        <item>@drawable/ss2_venom</item>
    </string-array>
    <string-array name="screen_3_data">
        <item>@drawable/ss3_a_star</item>
        <item>@drawable/ss3_aquaman</item>
        <item>@drawable/ss3_avengerinfinity</item>
        <item>@drawable/ss3_bohemian</item>
        <item>@drawable/ss3_bumblebee</item>
        <item>@drawable/ss3_dragonball</item>
        <item>@drawable/ss3_glass</item>
        <item>@drawable/ss3_spiderman</item>
        <item>@drawable/ss3_venom</item>
    </string-array>
    <string-array name="screen_4_data">
        <item>@drawable/ss4_a_star</item>
        <item>@drawable/ss4_aquaman</item>
        <item>@drawable/ss4_avengerinfinity</item>
        <item>@drawable/ss4_bohemian</item>
        <item>@drawable/ss4_bumblebee</item>
        <item>@drawable/ss4_dragonball</item>
        <item>@drawable/ss4_glass</item>
        <item>@drawable/ss4_spiderman</item>
        <item>@drawable/ss4_venom</item>
    </string-array>
    <string-array name="screen_5_data">
        <item>@drawable/ss5_a_star</item>
        <item>@drawable/ss5_aquaman</item>
        <item>@drawable/ss5_avengerinfinity</item>
        <item>@drawable/ss5_bohemian</item>
        <item>@drawable/ss5_bumblebee</item>
        <item>@drawable/ss5_dragonball</item>
        <item>@drawable/ss5_glass</item>
        <item>@drawable/ss5_spiderman</item>
        <item>@drawable/ss5_venom</item>
    </string-array>
    <string-array name="judul_tvshow">
        <item>Arrow</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>The Flash</item>
        <item>Gotham</item>
        <item>Iron Fist</item>
        <item>Naruto Shipudden</item>
        <item>Supergirl</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="poster_tvshow">
        <item>@drawable/tvshow_arrow</item>
        <item>@drawable/tvshow_dragon_ball</item>
        <item>@drawable/tvshow_fairytail</item>
        <item>@drawable/tvshow_flash</item>
        <item>@drawable/tvshow_gotham</item>
        <item>@drawable/tvshow_iron_fist</item>
        <item>@drawable/tvshow_naruto_shipudden</item>
        <item>@drawable/tvshow_supergirl</item>
        <item>@drawable/tvshow_the_walking_dead</item>
    </string-array>
    <string-array name="thn_rilis_tvshow">
        <item>2012</item>
        <item>1986</item>
        <item>2009</item>
        <item>2014</item>
        <item>2014</item>
        <item>2017</item>
        <item>2017</item>
        <item>2007</item>
        <item>2015</item>
        <item>2010</item>
    </string-array>
    <string name="release_date">Release Date : </string>
    <string name="duration">Duration : </string>
    <string name="genre">Genre : </string>
    <string name="director">Director : </string>
    <string name="actors">Actors : </string>
    <string name="txt_info_date">January 16, 2019</string>
    <string name="txt_info_duration">2h 22m</string>
    <string name="txt_info_genre">Action</string>
    <string name="txt_info_director">Mike</string>
    <string name="txt_info_actors">Mike, hon, mike hon</string>
    <string name="todo">TODO</string>
    <string name="languag_en">English</string>
    <string name="language_id">Indonesia</string>
    <string name="btn_save_leangue">Save</string>
    <string name="text_setting_language">Setting Language</string>
</resources>