<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin">
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Black"/>
        <TextView
            android:id="@+id/tv_durasi"
            android:layout_below="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Black"/>
        <TextView
            android:id="@+id/tv_genre"
            android:layout_below="@+id/tv_durasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Black"/>
        <TextView
            android:id="@+id/tv_director"
            android:layout_below="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Black"/>
        <TextView
            android:id="@+id/tv_actor"
            android:layout_below="@+id/tv_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actors"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Black"/>

        <TextView
            android:id="@+id/txt_info_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_toEndOf="@+id/tv_date"
            android:text="@string/txt_info_date"
            android:textColor="@color/Crimson"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_info_durasi"
            android:layout_toEndOf="@+id/tv_durasi"
            android:layout_below="@+id/txt_info_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_info_duration"
            android:textStyle="bold"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Crimson"/>
        <TextView
            android:id="@+id/txt_info_genre"
            android:layout_toEndOf="@+id/tv_genre"
            android:layout_below="@+id/txt_info_durasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_info_genre"
            android:textStyle="bold"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Crimson"/>
        <TextView
            android:id="@+id/txt_info_directors"
            android:layout_toEndOf="@+id/tv_director"
            android:layout_below="@+id/txt_info_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_info_director"
            android:textStyle="bold"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Crimson"/>
        <TextView
            android:id="@+id/txt_info_actors"
            android:layout_toEndOf="@+id/tv_actor"
            android:layout_below="@+id/txt_info_directors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_info_actors"
            android:textStyle="bold"
            android:layout_marginBottom="7dp"
            android:textColor="@color/Crimson"/>
        <HorizontalScrollView
            android:id="@+id/hsv_screenshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_actor"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_screen_1"
                    android:layout_width="235dp"
                    android:layout_height="131dp"
                    android:layout_marginEnd="13dp"
                    android:background="@color/Black"/>
                <ImageView
                    android:id="@+id/img_screen_2"
                    android:layout_width="235dp"
                    android:layout_height="131dp"
                    android:layout_marginEnd="13dp"
                    android:background="@color/Black"/>
                <ImageView
                    android:id="@+id/img_screen_3"
                    android:layout_width="235dp"
                    android:layout_height="131dp"
                    android:layout_marginEnd="13dp"
                    android:background="@color/Black"/>
                <ImageView
                    android:id="@+id/img_screen_4"
                    android:layout_width="235dp"
                    android:layout_height="131dp"
                    android:layout_marginEnd="13dp"
                    android:background="@color/Black"/>
                <ImageView
                    android:id="@+id/img_screen_5"
                    android:layout_width="235dp"
                    android:layout_height="131dp"
                    android:background="@color/Black"/>
                
            </LinearLayout>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/txt_info_overview"
            android:layout_below="@+id/hsv_screenshot"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>