<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_workshop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_margin="5dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_gd_poster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@color/Crimson"
                android:contentDescription="@string/todo" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@+id/img_gd_poster">
                <TextView
                    android:id="@+id/tv_gd_judul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_movie"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:background="@color/White"
                    android:textColor="@color/Black"
                    android:textSize="15sp"
                    android:paddingTop="5dp"/>
                <TextView
                    android:id="@+id/tv_gd_thn_rilis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thn_rilis"
                    android:background="@color/White"
                    android:textColor="@color/Black"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/tv_gd_durasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/durasi_movie"
                    android:background="@color/White"
                    android:textColor="@color/Black"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/tv_gd_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_movie"
                    android:background="@color/White"
                    android:textColor="@color/Black"
                    android:textSize="13sp"/>

            </LinearLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>