<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="13dp"
    card_view:cardCornerRadius="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:background="@color/White"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/txt_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/judul_movie"
            android:textColor="@color/Black"
            android:textSize="21sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_tgl_rilis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_judul"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_poster"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/release_date" />
        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tgl_rilis"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_poster"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/rating" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
